--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,10 @@
  <%= @list.name %>
+ <%= cl_image_tag(@list.photo.key,
+      width: 400, height: 300, crop: :fill) %>
+
+</button>
+      <%= link_to "delete this list", list_path(@list), class: "btn btn-cancel", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?" } %>
+    </div>
 
 <div id="bookmark">
   <% @list.bookmarks.each do |bookmark| %>
@@ -6,10 +12,6 @@
     <%= bookmark.movie.title %>:
     <%= bookmark.movie.overview %>
     <%= bookmark.comment %>
-    <%= link_to "Delete",
-    bookmark_path(bookmark),
-    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-  %>
   <% end %>
 </div>
 
